# ParonStatistics

./: .gitignore  1b3e.txt  CMakeLists.txt  PARON1.COD  PARON1.TXT  README.md  RED.TXT  RED.txt  RunMe.bat  array.h  false_paronyms.txt  main.cpp  perm3.txt  petAffixes.txt  prefixes.txt  roots.txt  run.sh  searchtree.h  strinfile.h  suffixes.txt  table.h  wordgroup.h  Исправленные ошибки.txt  Ошибки в критериях.txt
CrossLexica/: CompareParonyms.doc  CrossLexica.txt  KVAZI.TXT  README.md  RED.TXT  RED_paronyms.txt  comparison.py  comparison.txt  double_words.py  kus.txt  kvazi_not_found.txt  kvaziparonyms.txt  paronyms.txt  red_not_found.txt  semantic_compare.py  semantic_formal.txt  statistics.txt  synonyms_formal.txt  transform.py  update_paron.sh
affixes/: adj_suff.txt  antonym_pref.txt  omon_affixes.txt  unusual_pref.txt
all/: Makefile  cmake_install.cmake  main
data/: .PARON_DECODED.txt.swp  PARON_DECODED.txt  RED.txt  RED_FIRST_V_UTF.txt  RED_UTF.txt  adj_suff.txt  adj_suff_utf.txt  allomorph.txt  allomorph_old.txt  not_paronyms_dif.txt
python/: word2vec.py
results/: 1B3E.txt  1b3e_errors.txt  Letters permutation.txt  README.md  SVN.txt  SVN_5.txt  classifier.txt  classifier_simple.txt  classifier_svn_5.txt  double words.txt  doubles.txt  false_formal.txt  false_formal_upd.txt  false_perm.txt  false_svn_5.txt  formal_example.txt  formal_example_2.txt  par_err.txt  par_stat.txt  perm_cool.txt  perm_errors.txt  perm_example_2.txt  prefixes.txt  roots.txt  suffixes.txt  svn_example_5.txt  test_dict.txt  Исправления на втором этапе машинного обучения.txt  (+2 more)
(+272 files in other folders)
